<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragment.MainFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_60sdp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/uci_logo_letras"
            android:tint="@color/colorUCI"
            android:paddingBottom="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_uci_0"
            android:textSize="@dimen/_18sdp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_uci_1"
            android:textSize="@dimen/_18sdp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reflexion1"
            android:textStyle="italic"
            android:textSize="@dimen/_18sdp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reflexion2"
            android:textStyle="italic"
            android:textAlignment="center"
            android:textSize="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reflexion3"
            android:textStyle="italic"
            android:textAlignment="center"
            android:textSize="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_15sdp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/viewUCIemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_21sdp"
            android:text="@string/string_uci_email_iconify"
            android:textColor="@color/colorPrimaryDark"
            android:shadowColor="@color/md_black_1000_10"
            android:shadowDy="1"
            android:shadowDx="1"
            android:shadowRadius="10"
            android:layout_marginBottom="@dimen/_15sdp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/viewUCIweb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_21sdp"
            android:text="@string/string_uci_web_iconify"
            android:textColor="@color/colorPrimaryDark"
            android:shadowColor="@color/md_black_1000_10"
            android:shadowDy="1"
            android:shadowDx="1"
            android:shadowRadius="10"
            android:layout_marginBottom="@dimen/_15sdp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/viewUCIphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_21sdp"
            android:text="@string/string_uci_phone_iconify"
            android:textColor="@color/colorPrimaryDark"
            android:shadowColor="@color/md_black_1000_10"
            android:shadowDy="1"
            android:shadowDx="1"
            android:shadowRadius="10"
            android:layout_marginBottom="@dimen/_15sdp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
