<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragment.FICIFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:paddingTop="@dimen/_15sdp"
        android:paddingBottom="@dimen/_60sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_fici_0"
            android:textSize="@dimen/_18sdp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_15sdp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fici_obj_0"
            android:textSize="@dimen/_18sdp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_15sdp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fici_obj_1"
            android:textSize="@dimen/_18sdp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_15sdp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fici_obj_2"
            android:textSize="@dimen/_18sdp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_fici_1"
            android:textSize="@dimen/_18sdp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_15sdp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
