<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/gradient_root_calling_about"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragment.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:gravity="center_horizontal">

        <cu.uci.fiai.fici.libs.shimmer.ShimmerFrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shimmer_colored="true"
            app:shimmer_base_color="@color/colorPrimary"
            app:shimmer_highlight_alpha="1"
            app:shimmer_highlight_color="@color/colorPrimaryLight"
            app:shimmer_duration="3000">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:srcCompat="@drawable/uci_logo_letras"
                    android:tint="@color/colorPrimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_conected_future"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_conected_revolution"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </cu.uci.fiai.fici.libs.shimmer.ShimmerFrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/string_programming"
            android:textStyle="bold"
            android:textSize="@dimen/_21sdp"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jaime"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yanelis"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/string_design"
            android:textStyle="bold"
            android:textSize="@dimen/_21sdp"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rixon"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yanelis"
            android:textSize="@dimen/_18sdp"/>
            
        <cu.uci.fiai.fici.libs.shimmer.ShimmerFrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shimmer_colored="true"
            app:shimmer_base_color="@color/colorPrimary"
            app:shimmer_highlight_alpha="1"
            app:shimmer_highlight_color="@color/colorPrimaryLight"
            app:shimmer_duration="3000">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_170sdp"
                android:scaleType="centerInside"
                android:src="@drawable/fiai"
                android:tint="@color/colorPrimary" />

        </cu.uci.fiai.fici.libs.shimmer.ShimmerFrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_9sdp"
            android:text="@string/string_libs_open_source"
            android:textStyle="bold"
            android:textSize="@dimen/_21sdp"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CircularImageView"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Iconify"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Maps Forge"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NotifyMe"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RichPath"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SDP Android"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Shimmer"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SlidingRootNav"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SQLiteAssetHelper"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SwipeBack"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VegaLayout"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ViewPagerIndicator"
            android:textSize="@dimen/_18sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WaveView"
            android:textSize="@dimen/_18sdp"/>

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_21sdp"
            android:scaleType="centerInside"
            android:src="@drawable/fici_logo" />

        <TextView
            android:layout_margin="@dimen/_30sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="La información que aquí se muestra es válida para el curso 2018-2019 en la Universidad de las Ciencias Informáticas"
            android:textSize="@dimen/_12sdp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
